--- a/package.json
+++ b/package.json
@@ -13,11 +13,15 @@
   "author": "LitePix Team",
   "license": "Apache-2.0",
   "devDependencies": {
-    "cordova-android": "^14.0.1"
+    "cordova-android": "^14.0.1",
+    "cordova-plugin-nativestorage": "^2.3.2"
   },
   "cordova": {
     "platforms": [
       "android"
-    ]
+    ],
+    "plugins": {
+      "cordova-plugin-nativestorage": {}
+    }
   }
 }
