--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "io.cordova.sandfilltetris",
-  "displayName": "Sandfill Tetris",
+  "name": "com.touchcraft.sandfallblocks",
+  "displayName": "Sandfall Blocks",
   "version": "1.0.0",
-  "description": "Sandfill Tetris is a creative twist on classic Tetris where pieces behave like falling sand instead of rigid blocks.\nInstead of neatly stacking shapes, the fragments crumble and flow into gaps, creating unpredictable, organic patterns.\nThe goal remains to fill lines and score points, but the physics-driven mechanics add a fresh, chaotic challenge.",
+  "description": "Sandfall Figures is a creative twist on classic Blocks where pieces behave like falling sand instead of rigid blocks.\nInstead of neatly stacking shapes, the fragments crumble and flow into gaps, creating unpredictable, organic patterns.\nThe goal remains to fill lines and score points, but the physics-driven mechanics add a fresh, chaotic challenge.",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -10,7 +10,7 @@
   "keywords": [
     "ecosystem:cordova"
   ],
-  "author": "LitePix Team",
+  "author": "Touchcraft Team",
   "license": "Apache-2.0",
   "devDependencies": {
     "admob-plus-cordova": "^2.0.0-alpha.19",
@@ -20,24 +20,28 @@
     "cordova-plugin-file": "^8.1.3",
     "cordova-plugin-media": "^7.0.0",
     "cordova-plugin-nativestorage": "^2.3.2",
-    "cordova-plugin-splashscreen": "^6.0.1",
-    "cordova-plugin-vibration": "^3.1.1"
+    "cordova-plugin-splashscreen": "^6.0.1"
   },
   "cordova": {
     "platforms": [
       "browser",
-      "android",
-      "ios"
+      "ios",
+      "android"
     ],
     "plugins": {
       "cordova-plugin-nativestorage": {},
       "cordova-plugin-splashscreen": {},
       "cordova-plugin-media": {},
-      "cordova-plugin-vibration": {},
       "admob-plus-cordova": {
         "APP_ID_ANDROID": "ca-app-pub-4411114348896099~1525807767",
         "PLAY_SERVICES_VERSION": "23.2.0"
-      }
+      },
+      "cordova-plugin-vibration": {},
+      "cordova-plugin-firebasex": {}
     }
+  },
+  "dependencies": {
+    "cordova-plugin-firebasex": "18.0.7",
+    "cordova-plugin-vibration": "3.1.1"
   }
 }
